<resources>
    <string name="app_name">Education system in android</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mentorlar">Mentorlar</string>
    <string name="kurslar">Kurslar</string>
    <string name="guruhlar">Guruhlar</string>
    <string name="android_ndevelopment">Android \nDevelopment</string>
    <string name="sarlavha">Sarlavha</string>
    <string name="mentor">Mentorlar:</string>
    <string name="group">Guruhlar:</string>
    <string name="kurs_haqida">Kurs haqida</string>
    <string name="qo_shish">Qo\'shish</string>
    <string name="yopish">Yopish</string>
    <string name="kurs_nomi">Kurs nomi</string>
    <string name="time">Vaqti:</string>
    <string name="days">Kunlari:</string>
    <string name="kurs_ma_lumotlari">Kurs ma\'lumotlari</string>
    <string name="android">Android das da sda sda sd sad sad q wdwq kursida siz dastlab kotlin dasturlash tili o’rganasiz. Shundan so’ng, sodda va murakkab ko’rinishidagi UI komponentlari yordamida mobil ilovalarning tashqi dizayn ko’rinishi qannday yaratish o’rgatiladi. SQlite malumotlar bazasi hamda ROOM va realm kabi mashhur kutubxonalar, API tushunchasi va internet orqali ishlovchi dasturlar strukturasi, Firebase texnologiyasi, shuningdek hozirda judayam ko’p foydalanilayotgan arxitektura komponentalari, dagger kutubxonalari orqali murakkab mobil ilovalar yaratish imkoniyatiga ega bo’lasiz.</string>
</resources>