<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    app:cardCornerRadius="@dimen/_10sdp"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_10sdp">

        <TextView
            android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/kurs_ma_lumotlari"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toTopOf="@id/linear"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed" />

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="#F9F6F6"
            app:layout_constraintBottom_toTopOf="@id/linear2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv"
            app:layout_constraintVertical_bias="0.02">

            <EditText
                android:id="@+id/courseName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_border"
                android:hint="@string/kurs_nomi"
                android:paddingStart="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textColorHint="#C9C3C3"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="#F9F6F6"
            app:layout_constraintBottom_toTopOf="@id/btnCancel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear"
            app:layout_constraintVertical_bias="0.02">

            <EditText
                android:id="@+id/courseInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_border"
                android:hint="@string/kurs_haqida"
                android:paddingStart="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textColorHint="#C9C3C3"
                android:textSize="20sp"  />
        </LinearLayout>


        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_40sdp"
            android:text="@string/yopish"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintRight_toLeftOf="@id/btnSave"
            app:layout_constraintTop_toBottomOf="@id/linear2" />

        <TextView
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/qo_shish"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear2" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>